--- a/index.html
+++ b/index.html
@@ -8,15 +8,43 @@
     <title>Administrador De Pagos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+<header>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="./img/Administración de pagos.png" alt="Logo" width="30" height="24"
+                    class="d-inline-block align-text-top">
+                Payment Manager
+            </a>
+        </div>
+    </nav>
+    <section>
+        <h1>Administrador de Pagos Casero</h1>
+        <h3>¿Tienes muchas deudas y no sabes como realizar la administración de las mismas?</h3>
+        <p>Con el administrador de pagos puedes crear tu deuda, almacenarla, editarla (si aplica) y eliminarla una vez
+            hayas realizado el pago</p>
+        <p>Solo debes seguir las siguientes instrucciones:</p>
+        <div>
+            <li>Crea una deuda con el nombre y el monto y presiona el boton CREAR</li>
+            <li>Si deseas editar el monto o nombre de la deuda presiona el boton EDITAR</li>
+            <li>Una vez hayas realizado el pago presiona el boton PAGADO</li>
+            <li>Si ya la deuda no aplica presiona el boton ELIMINAR</li>
+        </div>
+    </section>
+    <section></section>
+    <section></section>
+</header>
 
 <body>
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
+    <script src="./js/code.js"></script>
 </body>
 
 </html>
