Incorporación de botones y estilos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <header>
     <nav class="navbar bg-body-tertiary">
@@ -20,12 +23,15 @@
             </a>
         </div>
     </nav>
-    <section>
+</header>
+
+<body>
+    <section class="section1">
         <h1>Administrador de Pagos Casero</h1>
         <h3>¿Tienes muchas deudas y no sabes como realizar la administración de las mismas?</h3>
         <p>Con el administrador de pagos puedes crear tu deuda, almacenarla, editarla (si aplica) y eliminarla una vez
             hayas realizado el pago</p>
-        <p>Solo debes seguir las siguientes instrucciones:</p>
+        <p class="instrucciones">Solo debes seguir las siguientes instrucciones:</p>
         <div>
             <li>Crea una deuda con el nombre y el monto y presiona el boton CREAR</li>
             <li>Si deseas editar el monto o nombre de la deuda presiona el boton EDITAR</li>
@@ -33,18 +39,99 @@
             <li>Si ya la deuda no aplica presiona el boton ELIMINAR</li>
         </div>
     </section>
-    <section></section>
-    <section></section>
-</header>
-
-<body>
-
-
+    <section class="formulario">
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">ID</label>
+            <input type="ID" class="form-control" id="exampleFormControlInput1" autocomplete="off">
+        </div>
+        <div class="mb-">
+            <label for="exampleFormControlInput1" class="form-label">Nombre Deuda</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" autocomplete="off">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Monto</label>
+            <input type="number" class="form-control" id="idInput" autocomplete="off">
+        </div>
+        <div>
+            <button type="button" class="btn btn-success">Success</button>
+        </div>
+    </section>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+            </tr>
+        </tbody>
+    </table>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
     <script src="./js/code.js"></script>
 </body>
+<footer class="footer">
+
+    <div class="footer-right">
+
+        <a href="#"><i class="fa fa-facebook"></i>
+            <img class="imgfooter" src="./resources/img/facebook logo.png" alt="logofacebook"></a>
+        <a href="#"><i class="fa fa-instagram"></i>
+            <img class="imgfooter" src="./resources/img/instagram logo.jpg" alt="logoinstagram"></a>
+        <a href="#"><i class="fa fa-twitter"></i>
+            <img class="imgfooter" src="./resources/img/logo twitter.png" alt="logotwitter"></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+        <img class="imgfooter" src="./resources/img/logo github.png" alt="logohithub">
+
+    </div>
+
+    <table class="table-footer gap-0 row-gap-3">
+        <caption style="color:gray">
+            Para mas información acerca de nuestras redes sociales
+        </caption>
+        <thead class="thead" style="color:gray">
+            <tr>
+                <td class="fw-semibold">Dirección</td>
+                <td class="fst-italic">Carrera 73 # 49 A -38, Barrio Normandía</td>
+            </tr>
+            <tr>
+                <td class="fw-semibold">Correo</td>
+                <td class="fst-italic">yumerlis.guedez@gmail.com</td>
+            </tr>
+        </thead>
+        <tbody class="tbody" style="color:gray">
+            <tr>
+                <td class="fw-semibold">Teléfonos</td>
+                <td class="fst-italic">3154685754 - 601 7022433</td>
+            </tr>
+            <tr>
+                <td class="fw-semibold">Marca Registrada</td>
+                <td class="fst-italic">ARES FENCING CLUB &copy;2021</td>
+            </tr>
+        </tbody>
+    </table>
+
+</footer>
 
 </html>
