--- a/index.html
+++ b/index.html
@@ -42,48 +42,34 @@
     <section class="formulario">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">ID</label>
-            <input type="ID" class="form-control" id="exampleFormControlInput1" autocomplete="off">
+            <input type="ID" class="form-control" id="idInput" autocomplete="off" disabled>
         </div>
         <div class="mb-">
             <label for="exampleFormControlInput1" class="form-label">Nombre Deuda</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" autocomplete="off">
+            <input type="text" class="form-control" id="nombreInput" autocomplete="off">
         </div>
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Monto</label>
-            <input type="number" class="form-control" id="idInput" autocomplete="off">
+            <label for="exampleFormControlInput1" class="form-label">Monto Deuda</label>
+            <input type="number" class="form-control" id="montoInput" autocomplete="off">
         </div>
         <div>
-            <button type="button" class="btn btn-success">Success</button>
+            <button id="btnEditar" type="button" class="btn btn-warning" onclick="deudaEditada()"
+                style="display: none">Editar</button>
+            <button id="btnAgregar" type="button" class="btn btn-success" onclick="crearDeuda()">Crear</button>
+            <button type="button" class="btn btn-info" onclick="mostrarDeuda()">Mostrar</button>
         </div>
     </section>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">ID Deuda</th>
+                <th scope="col">Nombre Deuda</th>
+
+                <th scope="col">Monto Deuda</th>
             </tr>
         </thead>
-        <tbody class="table-group-divider">
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-            </tr>
-        </tbody>
+        <tbody id="cuerpoTabla"></tbody>
+
     </table>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
