--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <button id="btnEditar" type="button" class="btn btn-warning" onclick="deudaEditada()"
                 style="display: none">Editar</button>
             <button id="btnAgregar" type="button" class="btn btn-success" onclick="crearDeuda()">Crear</button>
-            <button type="button" class="btn btn-info" onclick="mostrarDeuda()">Mostrar</button>
+
         </div>
     </section>
     <table class="table">
@@ -79,44 +79,15 @@
 </body>
 <footer class="footer">
 
-    <div class="footer-right">
-
-        <a href="#"><i class="fa fa-facebook"></i>
-            <img class="imgfooter" src="./resources/img/facebook logo.png" alt="logofacebook"></a>
-        <a href="#"><i class="fa fa-instagram"></i>
-            <img class="imgfooter" src="./resources/img/instagram logo.jpg" alt="logoinstagram"></a>
-        <a href="#"><i class="fa fa-twitter"></i>
-            <img class="imgfooter" src="./resources/img/logo twitter.png" alt="logotwitter"></a>
-        <a href="#"><i class="fa fa-github"></i></a>
-        <img class="imgfooter" src="./resources/img/logo github.png" alt="logohithub">
-
-    </div>
-
-    <table class="table-footer gap-0 row-gap-3">
-        <caption style="color:gray">
-            Para mas información acerca de nuestras redes sociales
-        </caption>
-        <thead class="thead" style="color:gray">
-            <tr>
-                <td class="fw-semibold">Dirección</td>
-                <td class="fst-italic">Carrera 73 # 49 A -38, Barrio Normandía</td>
-            </tr>
-            <tr>
-                <td class="fw-semibold">Correo</td>
-                <td class="fst-italic">yumerlis.guedez@gmail.com</td>
-            </tr>
-        </thead>
-        <tbody class="tbody" style="color:gray">
-            <tr>
-                <td class="fw-semibold">Teléfonos</td>
-                <td class="fst-italic">3154685754 - 601 7022433</td>
-            </tr>
-            <tr>
-                <td class="fw-semibold">Marca Registrada</td>
-                <td class="fst-italic">ARES FENCING CLUB &copy;2021</td>
-            </tr>
-        </tbody>
-    </table>
+    <p>
+        Para mas información acerca del uso de la herramienta ADMINISTRADOR DE PAGOS
+    </p>
+    <p>
+        Favor contactarse a los siguientes numeros 555-4478 / 666-5541
+    </p>
+    <p class="ultimoParrafo">
+        Creado por YUMERLIS GUEDEZ
+    </p>
 
 </footer>
 
