ultimos cambios de forma

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
             <label for="exampleFormControlInput1" class="form-label">ID</label>
             <input type="ID" class="form-control" id="idInput" autocomplete="off" disabled>
         </div>
-        <div class="mb-">
+        <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Nombre Deuda</label>
-            <input type="text" class="form-control" id="nombreInput" autocomplete="off">
+            <input type="text" class="form-control" id="nombreInput" autocomplete="off"
+                placeholder="Nombre de la persona que se le debe">
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Monto Deuda</label>
-            <input type="number" class="form-control" id="montoInput" autocomplete="off">
+            <input type="number" class="form-control" id="montoInput" autocomplete="off" placeholder="Valor en Pesos">
         </div>
         <div>
             <button id="btnEditar" type="button" class="btn btn-warning" onclick="deudaEditada()"
